src/test/ui/suggestions/dont-suggest-doc-hidden-variant-for-enum/dont-suggest-doc-hidden-variant-for-enum.stderr
error[E0308]: mismatched types
  --> $DIR/dont-suggest-doc-hidden-variant-for-enum.rs:6:26
   |
LL |     let x: Option<i32> = 1i32;
   |            -----------   ^^^^
   |            |             |
   |            |             expected enum `Option`, found `i32`
   |            |             help: try using a variant of the expected enum: `Some(1i32)`
   |            expected due to this
   |
   = note: expected enum `Option<i32>`
              found type `i32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
